# simdock

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  SECURITY.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
apps/simdock-cli/: Cargo.toml
apps/simdock-cli/src/: main.rs
apps/simdock-desktop/: Cargo.toml
apps/simdock-desktop/src/: i18n.rs  main.rs
assets/brand/: README.txt  simdock.icns
assets/brand/AppIcon.appiconset/: Contents.json
assets/screenshots/: README.md
crates/simdock-core/: Cargo.toml
crates/simdock-core/src/: lib.rs
crates/simdock-core/src/model/: device_template.rs  doctor.rs  instance.rs  mod.rs  platform.rs  profile.rs  requests.rs  runtime.rs  simulator_device.rs  task.rs
crates/simdock-core/src/provider/: android.rs  ios.rs  mod.rs
crates/simdock-core/src/service/: mod.rs
crates/simdock-infra/: Cargo.toml
crates/simdock-infra/src/: lib.rs  paths.rs  shell.rs
docs/: architecture.md  development.md  geo.md  packaging.md  seo-geo.md  seo.md
docs/ai/skills/simdock-contributor/: SKILL.md
scripts/: build-macos-app.sh  build-release.sh  check.sh  package-macos-pkg.sh  package-macos.sh  run-cli.sh  run-desktop.sh  size-report.sh
