[package]
name = "simdock-cli"
edition.workspace = true
version.workspace = true
license.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
simdock-core = { path = "../../crates/simdock-core" }
simdock-infra = { path = "../../crates/simdock-infra" }
