[package]
name = "simdock-infra"
edition.workspace = true
version.workspace = true
license.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
directories.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
